--- a/index.html
+++ b/index.html
@@ -28,8 +28,130 @@
         <h1>Tem <br> Médico?</h1>
     </section>
 
-    <section class="card-container">
+    <section class="counting-md">
+            <h2>13 médicos disponíveis</h2>
+    </section>
 
+    <section class="card-container">
+        <div class="card">
+            <div class="card-header">
+                <h2>Cardiologista</h2>
+                <div class="doctor-info">
+                    <img src="./Assets/Avatar.png" alt="Foto do médico" class="doctor-photo">
+                    <span>Felipe Drugovich</span>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="insurance-logos">
+                    <img src="./Assets/Unimed.png" alt="Unimed">
+                    <img src="./Assets/Hapvida.png" alt="Hapvida">
+                    <img src="./Assets/SulAmérica.png" alt="SulAmérica">
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="location">
+                    <span><i class="bi bi-geo-alt"></i> Floresta, Pernambuco</span>
+                </div>
+                <div class="sc-cl">
+                    <div class="schedule">
+                        <span><i class="bi bi-alarm"></i> 08:30 - 16:30</span>
+                    </div>
+                    <div class="clinic">
+                        <span>Clínica Mais Saúde</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2>Cardiologista</h2>
+                <div class="doctor-info">
+                    <img src="./Assets/Avatar (1).png" alt="Foto do médico" class="doctor-photo">
+                    <span>Felipe Drugovich</span>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="insurance-logos">
+                    <img src="./Assets/Unimed.png" alt="Unimed">
+                    <img src="./Assets/Hapvida.png" alt="Hapvida">
+                    <img src="./Assets/SulAmérica.png" alt="SulAmérica">
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="location">
+                    <span><i class="bi bi-geo-alt"></i> Floresta, Pernambuco</span>
+                </div>
+                <div class="sc-cl">
+                    <div class="schedule">
+                        <span><i class="bi bi-alarm"></i> 08:30 - 16:30</span>
+                    </div>
+                    <div class="clinic">
+                        <span>Clínica Mais Saúde</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="card">
+            <div class="card-header">
+                <h2>Cardiologista</h2>
+                <div class="doctor-info">
+                    <img src="./Assets/Avatar (2).png" alt="Foto do médico" class="doctor-photo">
+                    <span>Felipe Drugovich</span>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="insurance-logos">
+                    <img src="./Assets/Unimed.png" alt="Unimed">
+                    <img src="./Assets/Hapvida.png" alt="Hapvida">
+                    <img src="./Assets/SulAmérica.png" alt="SulAmérica">
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="location">
+                    <span><i class="bi bi-geo-alt"></i> Floresta, Pernambuco</span>
+                </div>
+                <div class="sc-cl">
+                    <div class="schedule">
+                        <span><i class="bi bi-alarm"></i> 08:30 - 16:30</span>
+                    </div>
+                    <div class="clinic">
+                        <span>Clínica Mais Saúde</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2>Cardiologista</h2>
+                <div class="doctor-info">
+                    <img src="./Assets/Avatar (3).png" alt="Foto do médico" class="doctor-photo">
+                    <span>Felipe Drugovich</span>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="insurance-logos">
+                    <img src="./Assets/Unimed.png" alt="Unimed">
+                    <img src="./Assets/Hapvida.png" alt="Hapvida">
+                    <img src="./Assets/SulAmérica.png" alt="SulAmérica">
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="location">
+                    <span><i class="bi bi-geo-alt"></i> Floresta, Pernambuco</span>
+                </div>
+                <div class="sc-cl">
+                    <div class="schedule">
+                        <span><i class="bi bi-alarm"></i> 08:30 - 16:30</span>
+                    </div>
+                    <div class="clinic">
+                        <span>Clínica Mais Saúde</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
