--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             <h2>13 médicos disponíveis</h2>
     </section>
 
+    <section class="bt-form-container">
+        <div class="bt-form">
+            <img src="Assets/Vector.svg" alt="">
+        </div>
+    </section>
+
     <section class="card-container">
         <div class="card">
             <div class="card-header">
@@ -153,5 +159,11 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="ft-info">
+            <span>Tem Médico? © 2025 | Todos direitos reservados</span>
+        </div>
+    </footer>
 </body>
 </html>
