--- a/index.html
+++ b/index.html
@@ -14,21 +14,24 @@
 <body>
     <header>
         <nav class="menu">
-            <button class="about"><a href="#">Sobre</a></button>
-    
+            <div class="about-div">
+                <button class="about"><a href="#">Sobre</a></button>
+            </div>
+            
             <div class="menu-icons">
-                <i class="bi bi-search"></i>
-                <i class="bi bi-filter"></i>
+                <div class="icons-bt">
+                    <img src="assets/icons/Magnify.svg" alt="Magnify">
+                </div>
                 <div class="menu-date">
-                    <i class="bi bi-calendar-event"></i>        
+                    <img src="assets/icons/Calendar.svg" alt="Magnify">        
                     <span class="date-text">18 de fevereiro</span>
                 </div>
             </div>
         </nav>
     </header>
 
-    <section class="main-title">
-        <h1>Tem <br> Médico?</h1>
+    <section class="hero">
+        <h1>TEM <br> MÉDICO?</h1>
     </section>
 
     <section class="counting-md">
@@ -83,5 +86,6 @@
         </div>
     </footer>
     <script src="./js/modal.js"></script>
+    <script src="./js/data-button.js"></script>
 </body>
 </html>
