--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="assets/icons/Magnify.svg" alt="Magnify">
                 </div>
                 <div class="menu-date">
-                    <img src="assets/icons/Calendar.svg" alt="Magnify">        
+                    <img src="assets/icons/Calendar.svg" alt="Calendar">        
                     <span class="date-text">18 de fevereiro</span>
                 </div>
             </div>
