--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             
             <div class="menu-icons">
                 <div class="icons-bt">
-                    <img src="assets/icons/magnifying glass.svg" alt="Magnifying glass">
+                    <img src="Assets/icons/magnifying glass.svg" alt="Magnifying glass">
                 </div>
                 <div class="menu-date">
-                    <img src="assets/icons/calendar.svg" alt="Calendar">        
+                    <img src="Assets/icons/calendar.svg" alt="Calendar">        
                     <span class="date-text">18 de fevereiro</span>
                 </div>
             </div>
