--- a/card.html
+++ b/card.html
@@ -17,11 +17,11 @@
     </div>
     <div class="card-footer">
         <div class="location">
-            <span><img src="Assets/Icons/local pin.svg" alt=""> Floresta, Pernambuco</span>
+            <span><img src="assets/icons/local pin.svg" alt=""> Floresta, Pernambuco</span>
         </div>
         <div class="sc-cl">
             <div class="schedule">
-                <span><img src="Assets/Icons/clock.svg" alt=""> 08:30 - 16:30</span>
+                <span><img src="assets/icons/clock.svg" alt=""> 08:30 - 16:30</span>
             </div>
             <div class="clinic">
                 <span>Clínica Mais Saúde</span>
