--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section class="bt-form-container">
         <div class="bt-form">
-            <img src="Assets/Vector.svg" alt="">
+            <img src="assets/Vector.svg" alt="">
         </div>
     </section>
 
