--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
 
     <footer>
         <div class="ft-info">
-            <span>Tem Médico? © 2025 | Todos direitos reservados</span>
+            <span>Tem Médico? © 2025 |&nbsp;</span>
+            <span>Todos direitos reservados</span>
         </div>
     </footer>
 
