--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <section class="bt-form-container">
         <div class="bt-form" id="open-modal-btn">
-            <img src="assets/Vector.svg" alt="">
+            <img src="./assets/icons/modal-icon.svg" alt="">
         </div>
     </section>
 
