--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="search-modal" id="searchModal">
                     <div class="search-modal-content">
                       <div class="search-modal-header">
-                        <button class="search-close-btn" id="closeSearchModalBtn">&times;</button>
+                        <span class="search-close-btn" id="closeSearchModalBtn">&times;</span>
                       </div>
                       <form>
                         <input type="text" placeholder="Cidade, Especialidade ou Médico (a)" class="search-input-field">
