--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tem Médico?</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/about.css">
     <link rel="stylesheet" href="./styles/cards.css">
     <link rel="stylesheet" href="./styles/modal.css">
     <link rel="stylesheet" href="./styles/search.css">
@@ -16,8 +17,41 @@
     <header>
         <nav class="menu">
             <div>
-                <button class="about"><a href="#">Sobre</a></button>
+              <button class="about">
+                  <a href="#">Sobre</a>
+              </button>
             </div>
+
+            <div class="about-modal" id="aboutModal">
+              <div class="about-modal-content">
+                <div class="about-modal-header">
+                  <span class="about-close-btn" id="closeAboutModalBtn">&times;</span>
+                </div>
+                <div class="about-text-content">
+                  <h1>
+                    Tornar mais fácil e rápido encontrar médicos disponíveis, com informações como especialidades, horários e locais de atendimento.
+                  </h1>
+                  <p><strong>Atualmente temos 578 médicos indicados.</strong> Ajude esse número a crescer indicando alguém.</p>
+                  <p>
+                    Acreditamos em uma construção coletiva, transparente e acessível. Por isso, nossa plataforma é colaborativa, sem fins lucrativos e sempre atualizada com a ajuda da comunidade.
+                  </p>
+                  <p><strong>O que estamos tentando resolver?</strong><br>
+                    A gente criou essa plataforma pra acabar com a dor de cabeça na hora de encontrar um médico — tudo num só lugar. Fácil, rápido e centralizado.
+                  </p>
+                  <p><strong>Como posso indicar alguém?</strong><br>
+                    Se você conhece um(a) médico(a) que merece estar no Tem Médico, preencha nosso formulário com as informações básicas. Você pode adicionar links para chat de agendamento — qualquer informação que ajude outras pessoas a encontrá-lo mais facilmente.
+                  </p>
+                  <p><strong>Como posso remover meu nome?</strong><br>
+                    Se seu nome está no diretório e você quer editar ou remover suas informações, é só mandar um e-mail para hello@japordf.com.
+                  </p>
+                  <p><strong>Quem tá por trás dessa missão?</strong><br>
+                    João Figueiredo<br>
+                    José Lucas Rodrigues
+                  </p>
+                </div>
+              </div>
+            </div>
+            
             
             <div class="menu-icons">
                 <div class="search-trigger" id="openSearchModalBtn">
@@ -155,6 +189,7 @@
     <!-- Container dos Cards -->
     <section id="card-container" class="card-container"></section>
 
+    <script src="./js/about.js" defer></script>
     <script src="./js/data-button.js"></script>
     <script src="./js/dropdown.js"></script>
     <script type="module" src="./js/search.js"></script>
