--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
   
         <div class="menu-date">
-          <img src="assets/icons/calendar.svg" alt="Calendar">
+          <img class="calendar-icon" src="assets/icons/calendar.svg" alt="Calendar">
           <span class="date-text">18 de fevereiro</span>
           <ul id="dropdownMenu" class="dropdown-menu hidden">
             <li data-dia="hoje" class="active">
