--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tem Médico?</title>
+    <link rel="icon" href="./assets/icons/fav-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/about.css">
     <link rel="stylesheet" href="./styles/cards.css">
@@ -234,9 +235,7 @@
   
   <!-- Empty State -->
   <section id="empty-state">
-    <img src="assets/icons/empty-state.svg" alt="Empty State Icon" />
     <div id="empty-state-texts">
-      <p>Lamentamos!</p>
       <p>Não temos médicos disponíveis</p>
     </div>
   </section>
