--- a/index.html
+++ b/index.html
@@ -32,23 +32,24 @@
             <h1>
               Tornar mais fácil e rápido encontrar médicos disponíveis, com informações como especialidades, horários e locais de atendimento.
             </h1>
-            <p><strong>Atualmente temos 578 médicos indicados. Ajude esse número a crescer indicando alguém.</strong></p>
+            <h2>Atualmente temos 578 médicos indicados. Ajude esse número a crescer indicando alguém.</h2>
             <p>
               Acreditamos em uma construção coletiva, transparente e acessível. Por isso, nossa plataforma é colaborativa, sem fins lucrativos e sempre atualizada com a ajuda da comunidade.
             </p>
-            <p><strong>O que estamos tentando resolver?</strong><br>
-              A gente criou essa plataforma pra acabar com a dor de cabeça na hora de encontrar um médico — tudo num só lugar. Fácil, rápido e centralizado.
-            </p>
-            <p><strong>Como posso indicar alguém?</strong><br>
-              Se você conhece um(a) médico(a) que merece estar no Tem Médico, preencha nosso formulário com as informações básicas. Você pode adicionar links para chat de agendamento — qualquer informação que ajude outras pessoas a encontrá-lo mais facilmente.
-            </p>
-            <p><strong>Como posso remover meu nome?</strong><br>
-              Se seu nome está no diretório e você quer editar ou remover suas informações, é só mandar um e-mail para hello@japordf.com.
-            </p>
-            <p><strong>Quem tá por trás dessa missão?</strong><br>
-              João Figueiredo<br>
-              José Lucas Rodrigues
-            </p>
+            <details class="details">
+              <summary class="sumary-title">O que estamos tentando resolver?</summary>
+              <span>
+                A gente criou essa plataforma pra acabar com a dor de cabeça na hora de encontrar um médico — tudo num só lugar. Fácil, rápido e centralizado.
+              </span>
+            </details>
+
+            <details class="details">
+              <summary class="sumary-title">Como posso indicar alguém?</summary>
+              <span>
+                Se você conhece um(a) médico(a) que merece estar no Tem Médico, preencha nosso formulário com as informações básicas. Você pode adicionar links para chat de agendamento — qualquer informação que ajude outras pessoas a encontrá-lo mais facilmente.
+              </span>
+            </details>
+
           </div>
         </div>
       </div>
