--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <div class="menu-icons">
         <div class="search-trigger" id="openSearchModalBtn">
           <img src="assets/icons/magnifying glass.svg" alt="Pesquisar">
+          <img src="assets/icons/magnifying glass-hover.svg" alt="Pesquisar">
         </div>
   
         <!-- Modal de busca -->
