--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <span class="close-btn">&times;</span>
         <button class="clean-button">Limpar</button>
       </div>
-  
+
       <form id="form">
         <div class="input-wrapper">
           <input
@@ -155,7 +155,7 @@
             <input type="file" id="photo" name="photo" accept="image/*" />
           </label>
         </div>
-  
+
         <input
           type="text"
           id="specialty"
@@ -188,6 +188,16 @@
           required
           class="label-form"
         />
+          <input
+          type="tel"
+          id="phone"
+          name="phone"
+          placeholder="WhatsApp para contato"
+          required
+          class="label-form"
+        />
+
+
         <input
           type="date"
           id="date"
@@ -196,7 +206,7 @@
           required
           class="label-form"
         />
-  
+
         <div class="time-schedule">
           <label for="start-hours">De</label>
           <input
@@ -207,7 +217,7 @@
             required
             class="label-form-schedule"
           />
-  
+
           <label for="end-hours">à</label>
           <input
             type="text"
@@ -218,7 +228,7 @@
             class="label-form-schedule"
           />
         </div>
-  
+
         <button type="submit">Enviar</button>
       </form>
     </div>
